--- a/internal/codegen/golang/templates/stdlib/queryCode.tmpl
+++ b/internal/codegen/golang/templates/stdlib/queryCode.tmpl
@@ -133,7 +133,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
                 {{- else if .HasSqlcDynamic }}
                     replaceText, args := {{$arg.VariableForField .}}.ToSql(curNumb)
                     curNumb += len(args)
-                    query = strings.ReplaceAll(query, "/*DYNAMIC:{{.Column.Name}}*/?", "replaceText", 1)
+                    query = strings.ReplaceAllString(query, "/*DYNAMIC:{{.Column.Name}}*/{{- if dollar }}$1{{ else }}?{{ end }}", replaceText)
                     queryParams = append(queryParams, args...)
                 {{- else }}
                   queryParams = append(queryParams, {{$arg.VariableForField .}})
@@ -142,8 +142,8 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
         {{- else }}
             {{- if .Arg.HasSqlcDynamic }}
                 var replaceText string
-                replaceText, queryParams = {{$arg.VariableForField .}}.ToSql(curNumb)
-                query = strings.ReplaceAll(query, "/*DYNAMIC:{{.VariableForField }}*/?", "replaceText", 1)
+                replaceText, queryParams = {{ .Arg.Column.Name}}.ToSql(curNumb)
+                query = strings.ReplaceAllString(query, "/*DYNAMIC:{{.Arg.Column.Name}}*/?", "replaceText")
             {{- else }}
             {{- /* Single argument parameter to this goroutine (they are not packed
                 in a struct), because .Arg.HasSqlcSlices further up above was true,
