Adding sql dynamic function

--- a/internal/codegen/golang/templates/pgx/dbCode.tmpl
+++ b/internal/codegen/golang/templates/pgx/dbCode.tmpl
@@ -12,7 +12,7 @@ type DBTX interface {
 {{- end }}
 }
 
-{{- if .HasSqlcDynamic }}
+{{- if hasDynamic }}
 type DynamicSql interface {
     ToSql(int) (string, []interface{})
 }
