Updates to match function with interface definition

--- a/internal/codegen/golang/templates/stdlib/dbCode.tmpl
+++ b/internal/codegen/golang/templates/stdlib/dbCode.tmpl
@@ -8,7 +8,7 @@ type DBTX interface {
 
 {{- if hasDynamic }}
 type DynamicSql interface {
-    Sql({{ if dollar}}int{{ end }}) (string, []interface{})
+    ToSql({{ if dollar}}int{{ end }}) (string, []interface{})
 }
 {{- end}}
 
