--- a/internal/codegen/golang/templates/stdlib/queryCode.tmpl
+++ b/internal/codegen/golang/templates/stdlib/queryCode.tmpl
@@ -116,6 +116,10 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
         curNumb := {{ .Arg.SqlcDynamic }}
         {{- end }}
         {{- if .Arg.Struct }}
+            {{- if .Arg.HasSqlcDynamic }}
+            var replaceText string
+            var args []interface{}
+            {{- end }}
             {{- $arg := .Arg }}
             {{- range .Arg.Struct.Fields }}
                 {{- if .HasSqlcSlice }}
@@ -131,7 +135,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
                       query = strings.Replace(query, "/*SLICE:{{.Column.Name}}*/?", "NULL", 1)
                     }
                 {{- else if .HasSqlcDynamic }}
-                    replaceText, args := {{$arg.VariableForField .}}.ToSql(curNumb)
+                    replaceText, args = {{$arg.VariableForField .}}.ToSql({{ if dollar }}curNumb{{ end }})
                     curNumb += len(args)
                     query = strings.ReplaceAll(query, "/*DYNAMIC:{{.Column.Name}}*/{{- if dollar }}$1{{ else }}?{{ end }}", replaceText)
                     queryParams = append(queryParams, args...)
@@ -142,7 +146,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
         {{- else }}
             {{- if .Arg.HasSqlcDynamic }}
                 var replaceText string
-                replaceText, queryParams = {{ .Arg.Column.Name}}.ToSql(curNumb)
+                replaceText, queryParams = {{ .Arg.Column.Name}}.ToSql({{ if dollar }}curNumb{{ end }})
                 query = strings.ReplaceAll(query, "/*DYNAMIC:{{.Arg.Column.Name}}*/?", "replaceText")
             {{- else }}
             {{- /* Single argument parameter to this goroutine (they are not packed
