feat: add "use_interface_return_types" option
Add an option to direct sqlc generation to use the querier interface for the return type of the WithTx method on the Queries struct.

Include WithTx in the Querier interface (when "emit_methods_with_db_argument" is false)

--- a/internal/codegen/golang/templates/pgx/dbCode.tmpl
+++ b/internal/codegen/golang/templates/pgx/dbCode.tmpl
@@ -28,7 +28,11 @@ type Queries struct {
 }
 
 {{if not .EmitMethodsWithDBArgument}}
+{{- if and .EmitInterface .UseInterfaceReturnTypes}}
+func (q *Queries) WithTx(tx pgx.Tx) Querier {
+{{- else -}}
 func (q *Queries) WithTx(tx pgx.Tx) *Queries {
+{{- end}}
 	return &Queries{
 		db: tx,
 	}
