fixed issue with empty space which failed a test

--- a/internal/codegen/golang/templates/stdlib/queryCode.tmpl
+++ b/internal/codegen/golang/templates/stdlib/queryCode.tmpl
@@ -23,10 +23,10 @@ type {{.Ret.Type}} struct { {{- range .Ret.Struct.Fields}}
 {{range .Comments}}//{{.}}
 {{end -}}
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}) ({{.Ret.DefineType}}, error) {
-    {{if eq .EnableOpenTracing true}}
+    {{- if eq .EnableOpenTracing true}}
     span, ctx := opentracing.StartSpanFromContext(ctx, "{{.MethodName}}")
     defer span.Finish()
-    {{end}}
+    {{end -}}
     {{- template "queryCodeStdExec" . }}
 	{{- if or (ne .Arg.Pair .Ret.Pair) (ne .Arg.DefineType .Ret.DefineType) }}
 	var {{.Ret.Name}} {{.Ret.Type}}
@@ -40,10 +40,10 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
 {{range .Comments}}//{{.}}
 {{end -}}
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}) ([]{{.Ret.DefineType}}, error) {
-    {{if eq .EnableOpenTracing true}}
+    {{- if eq .EnableOpenTracing true}}
     span, ctx := opentracing.StartSpanFromContext(ctx, "{{.MethodName}}")
     defer span.Finish()
-    {{end}}
+    {{end -}}
     {{- template "queryCodeStdExec" . }}
     if err != nil {
         return nil, err
@@ -75,10 +75,10 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
 {{range .Comments}}//{{.}}
 {{end -}}
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}) error {
-    {{if eq .EnableOpenTracing true}}
+    {{- if eq .EnableOpenTracing true}}
     span, ctx := opentracing.StartSpanFromContext(ctx, "{{.MethodName}}")
     defer span.Finish()
-    {{end}}
+    {{end -}}
     {{- template "queryCodeStdExec" . }}
     return err
 }
@@ -88,10 +88,10 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
 {{range .Comments}}//{{.}}
 {{end -}}
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}) (int64, error) {
-    {{if eq .EnableOpenTracing true}}
+    {{- if eq .EnableOpenTracing true}}
     span, ctx := opentracing.StartSpanFromContext(ctx, "{{.MethodName}}")
     defer span.Finish()
-    {{end}}
+    {{end -}}
     {{- template "queryCodeStdExec" . }}
     if err != nil {
         return 0, err
@@ -104,10 +104,10 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
 {{range .Comments}}//{{.}}
 {{end -}}
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}) (int64, error) {
-    {{if eq .EnableOpenTracing true}}
+    {{- if eq .EnableOpenTracing true}}
     span, ctx := opentracing.StartSpanFromContext(ctx, "{{.MethodName}}")
     defer span.Finish()
-    {{end}}
+    {{end -}}
     {{- template "queryCodeStdExec" . }}
     if err != nil {
         return 0, err
@@ -120,10 +120,10 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
 {{range .Comments}}//{{.}}
 {{end -}}
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}) (sql.Result, error) {
-    {{if eq .EnableOpenTracing true}}
+    {{- if eq .EnableOpenTracing true}}
     span, ctx := opentracing.StartSpanFromContext(ctx, "{{.MethodName}}")
     defer span.Finish()
-    {{end}}
+    {{end -}}
     {{- template "queryCodeStdExec" . }}
 }
 {{end}}
