TODO: Fix queryCode.tmpl to accept setting

--- a/internal/codegen/golang/templates/template.tmpl
+++ b/internal/codegen/golang/templates/template.tmpl
@@ -179,6 +179,8 @@ import (
 	{{range .}}{{.}}
 	{{end}}
 	{{end}}
+
+	"fmt"
 )
 {{end}}
 
@@ -210,6 +212,8 @@ import (
 	{{range .}}{{.}}
 	{{end}}
 	{{end}}
+
+	"fmt"
 )
 {{end}}
 
