--- a/internal/codegen/golang/templates/pgx/dbCode.tmpl
+++ b/internal/codegen/golang/templates/pgx/dbCode.tmpl
@@ -15,6 +15,9 @@ type DBTX interface {
 {{ if .EmitMethodsWithDBArgument}}
 func New() *Queries {
 	return &Queries{}
+{{- else if .GetDBFromContext}}
+func New(getDBFromContext func(context.Context) DBTX) *Queries {
+	return &Queries{getDBFromContext: getDBFromContext}
 {{- else -}}
 func New(db DBTX) *Queries {
 	return &Queries{db: db}
@@ -22,12 +25,14 @@ func New(db DBTX) *Queries {
 }
 
 type Queries struct {
-    {{if not .EmitMethodsWithDBArgument}}
+    {{- if .GetDBFromContext}}
+    getDBFromContext func(context.Context) DBTX
+    {{- else if not .EmitMethodsWithDBArgument}}
 	db DBTX
     {{end}}
 }
 
-{{if not .EmitMethodsWithDBArgument}}
+{{if and (not .EmitMethodsWithDBArgument) (not .GetDBFromContext)}}
 func (q *Queries) WithTx(tx pgx.Tx) *Queries {
 	return &Queries{
 		db: tx,
