Fix pgx.Tx use and array support

--- a/internal/codegen/golang/templates/pgx/dbCode.tmpl
+++ b/internal/codegen/golang/templates/pgx/dbCode.tmpl
@@ -10,6 +10,10 @@ type DBTX interface {
 {{- if .UsesBatch }}
 	SendBatch(context.Context, *pgx.Batch) pgx.BatchResults
 {{- end }}
+}
+
+type DB interface {
+	DBTX
 {{- if gt (len .CompositeTypes) 0 }}
 	LoadTypes(ctx context.Context, typeNames []string) ([]*pgtype.Type, error)
 	TypeMap() *pgtype.Map
@@ -20,7 +24,7 @@ type DBTX interface {
 func New() *Queries {
 	return &Queries{}
 {{- else -}}
-func New(db DBTX) *Queries {
+func New(db DB) *Queries {
 	return &Queries{db: db}
 {{- end}}
 }
@@ -34,13 +38,17 @@ type Queries struct {
 {{if gt (len .CompositeTypes) 0}}
 {{if not .EmitMethodsWithDBArgument}}
 func (q *Queries) RegisterTypes(ctx context.Context) error {
-	db := q.db
+	db, ok := q.db.(DB)
+	if !ok {
+		return fmt.Errorf("cannot register types with a transaction object")
+	}
 {{else}}
-func (q *Queries) RegisterTypes(ctx context.Context, db *Queries) error {
+func (q *Queries) RegisterTypes(ctx context.Context, db DB) error {
 {{end}}
 	typeNames := []string{ 
 	{{- range .CompositeTypes}}
 		"{{.SQLName}}",
+		"_{{.SQLName}}",
 	{{- end}}
 	}
 	dataTypes, err := db.LoadTypes(ctx, typeNames)
