--- a/internal/codegen/golang/templates/pgx/batchCode.tmpl
+++ b/internal/codegen/golang/templates/pgx/batchCode.tmpl
@@ -7,6 +7,10 @@ var (
 {{range .GoQueries}}
 {{if eq (hasPrefix .Cmd ":batch") true }}
 const {{.ConstantName}} = {{$.Q}}-- name: {{.MethodName}} {{.Cmd}}
+{{if $.EmitQueryComments -}}
+{{range .Comments}}--{{.}}
+{{end -}}
+{{end -}}
 {{escape .SQL}}
 {{$.Q}}
 
